--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.12",
     "next": "15.5.0",
     "pg": "^8.16.3",
+    "posthog-js": "^1.266.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
